fixing further spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -82,12 +82,12 @@ li {
 }
 
 .introduction h1 {
-	font-size: 2.5em;
-	font-weight: 400;
-
+	font-size: 3em;
+	font-weight: 500;
 }
 
 .introduction h3 {
+	margin-top: -1em;
 	font-size: 1.5em;
 	font-weight: 400;
 }
